--- a/src/app/page/movie-detail/movie-detail.page.scss
+++ b/src/app/page/movie-detail/movie-detail.page.scss
@@ -102,7 +102,7 @@ ion-card:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0,0,0,.8);
+  background: rgba(0, 0, 0, .8);
   z-index: 2;
 }
 
@@ -124,10 +124,12 @@ ion-card:hover {
 
   .runtime {
     position: relative;
+
     ion-icon {
       top: 0;
       position: absolute;
     }
+
     span {
       margin-left: 20px
     }
@@ -193,7 +195,7 @@ ion-card:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0, 0, 0, .5);
   text-align: center;
   font-size: 150px;
 
