--- a/src/app/page/registration/registration.page.html
+++ b/src/app/page/registration/registration.page.html
@@ -1,7 +1,9 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-back-button></ion-back-button>
+            <ion-button (click)="goBack()">
+                <ion-icon name="arrow-back"></ion-icon>
+            </ion-button>
         </ion-buttons>
         <ion-title>Sign Up</ion-title>
     </ion-toolbar>
