--- a/src/app/page/search/search.page.html
+++ b/src/app/page/search/search.page.html
@@ -1,7 +1,9 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-back-button></ion-back-button>
+            <ion-button (click)="goBack()">
+                <ion-icon name="arrow-back"></ion-icon>
+            </ion-button>
         </ion-buttons>
         <ion-buttons class="nav-logo">
             <ion-img src="assets/image/logo_words.png"></ion-img>
@@ -17,7 +19,8 @@
     <loading-icon *ngIf="!isDataLoaded"></loading-icon>
     <ion-grid>
         <ion-row>
-            <ion-col *ngFor="let movie of movieList" size-md="3" size-sm="4" size-xl="2" size-xs="6" style="display:flex;  text-align: center; align-items: center; padding: 0;">
+            <ion-col *ngFor="let movie of movieList" size-md="3" size-sm="4" size-xl="2" size-xs="6"
+                     style="display:flex;  text-align: center; align-items: center; padding: 0;">
                 <ion-card>
                     <span class="rating">{{movie.vote_average}}</span>
                     <ion-img (ionError)="coreService.handleImgError($event)"
