--- a/src/app/page/movie-detail/movie-detail.page.scss
+++ b/src/app/page/movie-detail/movie-detail.page.scss
@@ -149,6 +149,7 @@ ion-card:hover {
 
 
 .profile-btn {
+  margin-left: -15px;
   padding: 0;
 
   ion-button {
@@ -225,6 +226,7 @@ ion-card:hover {
   }
 
   .profile-btn {
+    margin-left: 0;
 
     ion-button {
       margin-right: 0;
