--- a/src/app/page/favorite/favorite.page.html
+++ b/src/app/page/favorite/favorite.page.html
@@ -8,8 +8,7 @@
                 <ion-col *ngFor="let movie of favorites" size-md="3" size-sm="4" size-xl="2" size-xs="6"
                          style="text-align: center; padding: 0;">
                     <ion-card>
-                        <ion-button (click)="deleteFromFavorite(movie)" class="deleteBtn" color="danger" fill="solid"
-                                    shape="round">
+                        <ion-button (click)="deleteFromFavorite(movie)" class="deleteBtn" color="danger">
                             <ion-icon name="trash"></ion-icon>
                         </ion-button>
                         <ion-img (ionError)="coreService.handleImgError($event)"
