--- a/src/app/page/watchlist/watchlist.page.html
+++ b/src/app/page/watchlist/watchlist.page.html
@@ -6,8 +6,7 @@
                 <ion-col *ngFor="let movie of watchList" size-md="3" size-sm="4" size-xl="2" size-xs="6"
                          style="text-align: center; padding: 0;">
                     <ion-card>
-                        <ion-button (click)="deleteFormWatchList(movie)" class="deleteBtn" color="danger" fill="solid"
-                                    shape="round">
+                        <ion-button (click)="deleteFormWatchList(movie)" class="deleteBtn" color="danger">
                             <ion-icon name="trash"></ion-icon>
                         </ion-button>
                         <ion-img (ionError)="coreService.handleImgError($event)"
