--- a/src/app/page/movie-detail/movie-detail.page.scss
+++ b/src/app/page/movie-detail/movie-detail.page.scss
@@ -120,6 +120,9 @@ ion-card:hover {
   }
 
   .genre {
+    text-align: center;
+    align-items: center;
+    padding-right: 10px;
   }
 
   .runtime {
